<resources>
    <string name="app_name">Hey doc</string>

    <string name="login">로그인</string>
    <string name="sign">회원가입</string>
    <string name="findId">아이디 찾기</string>
    <string name="findPw">비밀번호 찾기</string>
    <string name="userId">아이디</string>
    <string name="userPw">비밀번호</string>
    <string name="conUserPw">비밀번호 재확인</string>
    <string name="userName">이름</string>
    <string name="birthday">생년월일</string>
    <string name="gender">성별</string>
    <string name="email">이메일</string>
    <string name="bloodtype">혈액형</string>
    <string name="at">"@"</string>
    <string name="phoneNum">휴대전화</string>
    <string name="signClk">가입하기</string>
    <string name="agreeBtn">동의함</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="label">개인정보 수집에 관한 설명입니다.</string>
    <string name="subject">제목</string>
    <string name="findIdTab">아이디 찾기</string>
    <string name="findPwTab">비밀번호 찾기</string>
    <string name="consulting">의료상담</string>
    <string name="record">의료기록</string>
    <string name="paper1">진단서</string>
    <string name="paper2">처방전</string>
    <string name="emergency">S O S</string>
    <string name="location">병원/약국 찾기</string>
    <string name="tip">의료 TIP</string>
    <string name="privacy">개인정보</string>
    <string name="selhospital">병원 선택</string>
    <string name="seltype">진료과</string>
    <string name="inner">내과</string>
    <string name="pul">호흡기내과</string>
    <string name="gi">소화기내과</string>
    <string name="car">순환기내과</string>
    <string name="os">정형외과</string>
    <string name="ns">신경외과</string>
    <string name="gs">일반외과</string>
    <string name="obgy">산부인과</string>
    <string name="ped">소아청소년과</string>
    <string name="der">피부과</string>
    <string name="uro">비뇨기과</string>
    <string name="eye">안과</string>
    <string name="ent">이비인후과</string>
    <string name="psy">정신과</string>
    <string name="em">응급의학과</string>
    <string name="reh">재활의학과</string>
    <string name="den">치과</string>
    <string name="pharmacy">약국</string>
    <string name="transfer">입력</string>
    <string name="typerecord">기록</string>
    <string name="date">날짜</string>
    <string name="detail">내용</string>
    <string name="attach">첨부파일</string>
    <string name="save">저장</string>
    <string name="findlocation">병원/약국 찾기</string>

</resources>
