<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/app_name"
        android:textColor="#2E9AFE"
        android:textSize="30sp"
        app:layout_constraintCircle="@id/imageView"
        app:layout_constraintCircleAngle="315"
        app:layout_constraintCircleRadius="120dp"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main" />

    <EditText
        android:id="@+id/loginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/userId"
        android:maxLength="20" />

    <EditText
        android:id="@+id/loginpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginId"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/userPw"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="20"
        />

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveid"
        app:layout_constraintTop_toBottomOf="@id/loginpw"
        app:layout_constraintLeft_toLeftOf="@id/loginpw"
        android:text="아이디 저장"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savepw"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@id/saveid"
        app:layout_constraintLeft_toRightOf="@id/saveid"
        android:text="자동 로그인"
        />

    <Button
        android:id="@+id/loginclk"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/loginId"
        app:layout_constraintTop_toTopOf="@id/loginId"
        android:background="@drawable/bubble2"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp" />

    <Button
        android:id="@+id/findId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/saveid"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/make_curved"
        android:text="@string/findId"
        style="?android:attr/borderlessButtonStyle"
        />


    <Button
        android:id="@+id/findPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="@id/findId"
        app:layout_constraintLeft_toRightOf="@id/findId"
        android:text="@string/findPw"
        android:background="@drawable/make_curved"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/signUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/make_curved"
        android:text="@string/sign"
        app:layout_constraintLeft_toRightOf="@id/findPw"
        app:layout_constraintTop_toTopOf="@id/findPw" />


</androidx.constraintlayout.widget.ConstraintLayout>