<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_activity"
    android:stretchColumns="0,1"
    >


<!--    <TableRow-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" >-->

<!--        <TextView-->
<!--            android:id="@+id/appName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#ff2E9AFE"-->
<!--            android:text="@string/app_name"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:layout_span="2"-->
<!--            android:textColor="#ffffff"-->
<!--            android:textSize="30sp"/>-->
<!--    </TableRow>-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/consult"
            android:text="@string/consulting"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="150dp"
            android:layout_height="150dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/consulting"
            android:layout_margin="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom|center_horizontal"
            />

        <Button
            android:id="@+id/record"
            android:text="@string/record"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="150dp"
            android:layout_height="150dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/record"
            android:layout_margin="30dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom|center_horizontal"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/emergency"
            android:text="@string/emergency"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="150dp"
            android:layout_height="150dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/bell"
            android:layout_margin="30dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom|center_horizontal"
            />

        <Button
            android:id="@+id/location"
            android:text="@string/location"
            android:textStyle="bold"

            android:layout_width="150dp"
            android:layout_height="150dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/location"
            android:layout_margin="30dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom|center_horizontal"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

<!--        <Button-->
<!--            android:id="@+id/tip"-->
<!--            android:text="@string/tip"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="150dp"-->
<!--            style="?android:attr/borderlessButtonStyle"-->
<!--            android:background="@drawable/tip"-->
<!--            android:layout_margin="30dp"-->
<!--            android:textSize="15sp"-->
<!--            android:gravity="bottom|center"-->
<!--            />-->

        <Button
            android:id="@+id/showuserinfo"
            android:text="@string/privacy"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="150dp"
            android:layout_height="150dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/member"
            android:layout_margin="30dp"
            android:textSize="15sp"
            android:gravity="bottom|center"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            >

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/newsText"
                />

            <ImageView
                android:id="@+id/newsImg"
                android:layout_width="150dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />

            <TextView
                android:id="@+id/newsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="불러오는 중 입니다."
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:maxLines="2"
                android:ellipsize="end"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/newsImg"
                app:layout_constraintLeft_toLeftOf="@id/newsImg"

                />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </TableRow>

</TableLayout>