<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/record_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:text="@string/subject"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/thesubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@id/subject"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@drawable/setdisabled_color"
        />

    <TextView
        android:id="@+id/seltype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seltype"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/thesubject"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/thespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:ems="7"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@id/seltype"
        app:layout_constraintTop_toBottomOf="@id/thesubject"
        android:textColor="@drawable/setdisabled_color"
        />


    <Spinner
        android:id="@+id/spinner_recorddetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/thespinner"
        app:layout_constraintTop_toBottomOf="@id/thesubject"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/seltype"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />


    <EditText
        android:id="@+id/thedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintTop_toBottomOf="@id/spinner_recorddetail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@drawable/setdisabled_color"
        />

    <Button
        android:id="@+id/seldate_recorddetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/spinner_recorddetail"
        app:layout_constraintLeft_toRightOf="@id/thedate"
        android:background="@drawable/calender"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        style="?android:attr/borderlessButtonStyle"
        />


    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />


    <EditText
        android:id="@+id/thedetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:enabled="false"
        android:textColor="@drawable/setdisabled_color"
        />

    <TextView
        android:id="@+id/attach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/thedetail"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:id="@+id/addimage_detail"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/attach"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"

        />


    <Button
        android:id="@+id/findattach_detail"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:layout_constraintTop_toBottomOf="@id/thedetail"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/search"
        style="?android:attr/borderlessButtonStyle"
        android:visibility="invisible"

        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#BDBDBD"
        android:text="뒤로"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@id/edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"/>


    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#ff2E9AFE"
        android:text="수정"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        android:textColor="#ffffff"
        android:textSize="20sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>